--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,8 @@
     "mysql": "^2.17.1",
     "sqlite3": "^5.0.0",
     "uuid": "^3.3.3",
-    "wait-port": "^0.2.2"
+    "wait-port": "^0.2.2",
+    "dotenv":"^16.0.3"
   },
   "resolutions": {
     "ansi-regex": "5.0.1"
@@ -29,6 +30,7 @@
     "jest": "^27.2.5",
     "nodemon": "^2.0.13",
     "prettier": "^1.18.2",
-    "react-error-overlay": "^6.0.9"
+    "react-error-overlay": "^6.0.9",
+    "dotenv":"^16.0.3"    
   }
 }
